; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/gma500/extr_cdv_intel_hdmi.c_cdv_hdmi_destroy.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/gma500/extr_cdv_intel_hdmi.c_cdv_hdmi_destroy.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.drm_connector = type { i32 }
%struct.gma_encoder = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.drm_connector*)* @cdv_hdmi_destroy to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @cdv_hdmi_destroy(%struct.drm_connector* %0) #0 {
  %2 = alloca %struct.drm_connector*, align 8
  %3 = alloca %struct.gma_encoder*, align 8
  store %struct.drm_connector* %0, %struct.drm_connector** %2, align 8
  %4 = load %struct.drm_connector*, %struct.drm_connector** %2, align 8
  %5 = call %struct.gma_encoder* @gma_attached_encoder(%struct.drm_connector* %4)
  store %struct.gma_encoder* %5, %struct.gma_encoder** %3, align 8
  %6 = load %struct.gma_encoder*, %struct.gma_encoder** %3, align 8
  %7 = getelementptr inbounds %struct.gma_encoder, %struct.gma_encoder* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  %9 = call i32 @psb_intel_i2c_destroy(i32 %8)
  %10 = load %struct.drm_connector*, %struct.drm_connector** %2, align 8
  %11 = call i32 @drm_connector_unregister(%struct.drm_connector* %10)
  %12 = load %struct.drm_connector*, %struct.drm_connector** %2, align 8
  %13 = call i32 @drm_connector_cleanup(%struct.drm_connector* %12)
  %14 = load %struct.drm_connector*, %struct.drm_connector** %2, align 8
  %15 = call i32 @kfree(%struct.drm_connector* %14)
  ret void
}

declare dso_local %struct.gma_encoder* @gma_attached_encoder(%struct.drm_connector*) #1

declare dso_local i32 @psb_intel_i2c_destroy(i32) #1

declare dso_local i32 @drm_connector_unregister(%struct.drm_connector*) #1

declare dso_local i32 @drm_connector_cleanup(%struct.drm_connector*) #1

declare dso_local i32 @kfree(%struct.drm_connector*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
